# crtm

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CTestConfig.cmake  ChangeLog.txt  DIFFLOG.md  Get_CRTM_Binary_Files.sh  LICENSE  LICENSE.md  NOTES.md  README  README.NCO  README.md  README_JEDI.md  Set_CRTM_Environment.sh  Uncompress_Binary_Files.sh  VERSION.cmake  config_bld_test.crtm  configure  configure.ac  crtm-config.cmake.in  crtm-import.cmake.in  crtm_release_notes.txt  link_crtm_coeffs.sh  make_crtm_lib.sh
libsrc/: ACCoeff_Binary_IO.f90  ACCoeff_Define.f90  ADA_Module.f90  AOvar_Define.f90  AerosolCoeff_Binary_IO.f90  AerosolCoeff_Define.f90  AerosolCoeff_netCDF_IO.f90  Azimuth_Emissivity_F6_Module.f90  Azimuth_Emissivity_Module.f90  Binary_File_Utility.f90  CMakeLists.txt  CRTM_AOD_Module.f90  CRTM_Adjoint_Module.f90  CRTM_AerosolCoeff.f90  CRTM_AerosolScatter.f90  CRTM_Aerosol_Define.f90  CRTM_AncillaryInput_Define.f90  CRTM_AntennaCorrection.f90  CRTM_AtmAbsorption.f90  CRTM_AtmOptics.f90  CRTM_AtmOptics_Define.f90  CRTM_Atmosphere.f90  CRTM_Atmosphere_Define.f90  CRTM_ChannelInfo_Define.f90  CRTM_CloudCoeff.f90  CRTM_CloudCover_Define.f90  CRTM_CloudScatter.f90  CRTM_Cloud_Define.f90  CRTM_FastemX.f90  CRTM_Forward_Module.f90  CRTM_GeometryInfo.f90  CRTM_GeometryInfo_Define.f90  CRTM_Geometry_Define.f90  CRTM_IRSSEM.f90  CRTM_IR_Ice_SfcOptics.f90  CRTM_IR_Land_SfcOptics.f90  CRTM_IR_Snow_SfcOptics.f90  CRTM_IR_Water_SfcOptics.f90  CRTM_IRiceCoeff.f90  CRTM_IRlandCoeff.f90  (+118 more)
libsrc/test/: Makefile  Makefile.in  check_crtm.fpp
src/: CMakeLists.txt  CRTM_Adjoint_Module.f90  CRTM_Forward_Module.f90  CRTM_K_Matrix_Module.f90  CRTM_LifeCycle.f90  CRTM_Module.F90  CRTM_Module.f90  CRTM_Module.fpp  CRTM_Parameters.f90  CRTM_SensorInfo.f90  CRTM_Tangent_Linear_Module.f90  CRTM_Version.inc  Changelog  Check_Files  Makefile  bibliography.bib  make.common_coefficient_targets  make.common_targets  make.macros  make.profile_data_targets  make.rules  make.sensor_coefficient_targets  make.tarball_exclude
src/Ancillary/: CRTM_AncillaryInput_Define.f90
src/AntCorr/: CRTM_AntCorr.f90
src/AntennaCorrection/: CRTM_AntennaCorrection.f90
src/AtmAbsorption/: CRTM_AtmAbsorption.f90  CRTM_AtmAbsorption_Define.f90  CRTM_AtmAbsorption_IntAbsorber.f90  CRTM_AtmAbsorption_Predictor.f90  CRTM_Predictor.f90  CRTM_Predictor_Define.f90
src/AtmAbsorption/ODAS/: ODAS_AtmAbsorption.f90  ODAS_Predictor.f90  ODAS_Predictor_Define.f90
src/AtmAbsorption/ODCAPS/: ODCAPS_AtmAbsorption.f90  ODCAPS_Predictor.f90  ODCAPS_Predictor_Define.f90
src/AtmAbsorption/ODPS/: ODPS_AtmAbsorption.f90  ODPS_CoordinateMapping.f90  (+5 more)
src/AtmOptics/: AOvar_Define.f90  CRTM_AtmOptics.f90  CRTM_AtmOptics_Define.f90
src/AtmScatter/: CRTM_AOD_Module.f90  CRTM_AerosolScatter.f90  CRTM_AtmScatter_Define.f90  CRTM_CloudScatter.f90  CRTM_MoleculeScatter.f90
src/Atmosphere/: CRTM_Aerosol_Binary_IO.f90  CRTM_Aerosol_Define.f90  CRTM_Atmosphere.f90  CRTM_Atmosphere_Binary_IO.f90  CRTM_Atmosphere_Define.f90  CRTM_Atmosphere_IO.f90  CRTM_Cloud_Binary_IO.f90  CRTM_Cloud_Define.f90  CRTM_Hypsometric.f90  CRTM_Model_Profiles.f90  iAtm_Define.f90
src/CRTM_Utility/: CRTM_Interpolation.f90  CRTM_Profile_Interpolation.f90  CRTM_Utility.f90  Interp_ND.f90
src/ChannelInfo/: CRTM_ChannelInfo.f90  CRTM_ChannelInfo_Define.f90
src/Coefficients/: CRTM_AerosolCoeff.f90  CRTM_BeCoeff.f90  CRTM_CloudCoeff.f90  CRTM_EmisCoeff.f90  CRTM_IRiceCoeff.f90  CRTM_IRlandCoeff.f90  CRTM_IRsnowCoeff.f90  CRTM_IRwaterCoeff.f90  CRTM_MWwaterCoeff.f90  CRTM_SharedData.f90  CRTM_SpcCoeff.f90  CRTM_TauCoeff.f90  CRTM_VISiceCoeff.f90  CRTM_VISlandCoeff.f90  CRTM_VISsnowCoeff.f90  CRTM_VISwaterCoeff.f90
src/Example_Code/: Makefile  commit_baseline.rb  copyBaseline.rb  copy_Test_Baseline  copy_baseline.rb  cvsdiff_Test_Baseline  delBaseline.rb  del_Test_Baseline  delete_baseline.rb  diffBaseline.rb  diff_Test_Baseline  diff_baseline.rb  link_admin  make.common  make.macros  run_baseline  updateBaseline.rb  update_Test_Baseline
src/GeometryInfo/: CRTM_GeometryInfo.f90  CRTM_GeometryInfo_Define.f90  CRTM_GeometryInfo_IO.f90  CRTM_Geometry_Define.f90  CRTM_Geometry_IO.f90
src/Internal/: preamble.tex
src/Interpolation/: CRTM_Interpolation.f90  CRTM_Interpolation_avgquad.f90
src/NLTE/: NLTE_Parameters.f90
src/Options/: CRTM_Options_Define.f90
src/RTSolution/: CRTM_Active_Sensor.f90  CRTM_RTSolution.f90  CRTM_RTSolution_Binary_IO.f90  CRTM_RTSolution_Define.f90  CRTM_RTSolution_IO.f90  Common_RTSolution.f90  RTV_Define.f90
src/SensorInfo/: CRTM_SensorInfo.f90
src/SensorInput/: CRTM_SensorInput_Define.f90
src/SfcOptics/: CRTM_IR_Ice_SfcOptics.f90  CRTM_IR_Land_SfcOptics.f90  CRTM_IR_Snow_SfcOptics.f90  CRTM_IR_Water_SfcOptics.f90  CRTM_MW_Ice_SfcOptics.f90  CRTM_MW_Land_SfcOptics.f90  CRTM_MW_Snow_SfcOptics.f90  CRTM_MW_Water_SfcOptics.f90  CRTM_SfcOptics.f90  CRTM_SfcOptics_Define.f90  CRTM_VIS_Ice_SfcOptics.f90  CRTM_VIS_Land_SfcOptics.f90  CRTM_VIS_Snow_SfcOptics.f90  CRTM_VIS_Water_SfcOptics.f90
src/Source_Functions/: CRTM_Planck_Functions.f90
src/Surface/: CRTM_SensorData_Define.f90  CRTM_SensorInfo.f90  CRTM_Surface_Binary_IO.f90  CRTM_Surface_Define.f90  CRTM_Surface_IO.f90
src/Test_Code/: Makefile  Test.SensorInfo  delete_baseline.rb  make.common  make.rules  run_baseline  run_baseline.rb
src/Test_Utility/: CRTM_Test_Utility.f90
src/Utility/: Binary_File_Utility.f90  Compare_Float_Numbers.f90  Date_Utility.f90  Endian_Utility.f90  Error_Handler.f90  File_Utility.f90  Fundamental_Constants.f90  ListFile_Utility.f90  List_File_Utility.f90  Makefile  SignalFile_Utility.f90  String_Utility.f90  Timing_Utility.f90  Type_Kinds.f90  message_handler.f90  oSubset_Define.f90
src/Zeeman/: Zeeman_Utility.f90
src/configure/: gfortran.setup  gfortran_debug.setup  pgi_debug.setup
src/pCRTM/: Makefile
src/shell_scripts/: Makefile  diff_CRTM  linkcoeffdata  linkfiles  tag_CRTM  unlinkcoeffdata
test/: CMakeLists.txt  CMakeLists.txt~  crtm_data_downloader.py  readme_crtm_tests.txt
test/testinput/: single_profile.yaml
(+8730 files in other folders)
